[package]
name = "fig2json"
version = "0.3.0"
edition = "2021"
authors = ["kreako <olivier@kreako.fr>"]
description = "CLI tool to convert Figma .fig files to LLM-friendly JSON format"
license = "MIT"
repository = "https://github.com/kreako/fig2json"
readme = "README.md"
keywords = ["figma", "converter", "json", "cli", "llm"]
categories = ["command-line-utilities", "encoding"]

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "2.0"

# ZIP archive handling
zip = "8.6"

# Compression
flate2 = "1.1"
zstd = "0.13"

# Kiwi schema decoding
kiwi-schema = "0.2.1"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 encoding for blobs
base64 = "0.22"

# CLI argument parsing
clap = { version = "4.6", features = ["derive"] }

[lints.clippy]
all = "deny"
